--- a/src/main/resources/templates/thymeleaf/fo/landing/1006/index.html
+++ b/src/main/resources/templates/thymeleaf/fo/landing/1006/index.html
@@ -81,8 +81,8 @@
 			<img src="resources/landing/1006/common/img/text_5.png" class="mo-on" style="width:85%; margin:0 auto;">
 		</div>
 		<div class="btn_1">
-			<a href="https://bit.ly/3D4E8xp" target="_blank"><img src="resources/landing/1006/common/img/btn_1.png" class="pc-on" style="margin:0 auto;"></a>
-			<a href="https://bit.ly/3D4E8xp" target="_blank"><img src="resources/landing/1006/common/img/btn_1.png" class="mo-on" style="width: 80%; margin:0 auto;"></a>
+			<a href="https://promo.dealing-art.com/dae/list" target="_blank"><img src="resources/landing/1006/common/img/btn_1.png" class="pc-on" style="margin:0 auto;"></a>
+			<a href="https://promo.dealing-art.com/dae/list" target="_blank"><img src="resources/landing/1006/common/img/btn_1.png" class="mo-on" style="width: 80%; margin:0 auto;"></a>
 		</div>
 		<div class="text_4">
 			<img src="resources/landing/1006/common/img/text_6.png" class="pc-on" style="margin:0 auto;">
