--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -104,7 +104,7 @@
 						
 						    <!--1006 배너추가-->
 							<div class="swiper-slide" align="center" style="background-color:#0B1538;">
-								<a href="/evening"><img src="resources/img/banner-17_pc.jpg" /></a>
+								<a href="https://promo.dealing-art.com/dae/list" target="_blank"><img src="resources/img/banner-18_pc.png" /></a>
 							</div>
 							
 							<div class="swiper-slide" align="center" style="background-color:#6094CE;">
@@ -135,7 +135,7 @@
 						<div class="swiper-wrapper">
 							
 							<div class="swiper-slide">
-								<a href="/evening"><img src="resources/img/banner-17_pc.jpg" /></a>
+								<a href="https://promo.dealing-art.com/dae/list" target="_blank"><img src="resources/img/banner-18_pc.png" /></a>
 							</div>
 							
 							<div class="swiper-slide">
@@ -172,7 +172,7 @@
 						<div class="swiper-wrapper">
 						
 							<div class="swiper-slide">
-								<a href="/evening"><img src="resources/img/banner-17_mobile.jpg"/></a>
+								<a href="https://promo.dealing-art.com/dae/list" target="_blank"><img src="resources/img/banner-18_mobile.png"/></a>
 							</div>
 							
 							<div class="swiper-slide">
