--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -220,7 +220,7 @@
 										</a>
 									</h4>
 								</div>
-								<div id="collapse3" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading7">
+								<div id="collapse3" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading7" >
 									<div class="panel-body">
 										<div class="color-box">
 											<input type="checkbox" id="mc-1" name="workClrCd" value="MIX" class="searchOption" onclick="dealSearch()"><label for="mc-1" class="mc-1"></label>
@@ -640,7 +640,7 @@
 								<input type="checkbox" id="mc-27" name="workClrCd" value="ORANGE" class="searchOption"><label for="mc-27" class="mc-3"></label>
 								<input type="checkbox" id="mc-28" name="workClrCd" value="YELLOW" class="searchOption"><label for="mc-28" class="mc-4"></label>
 								<input type="checkbox" id="mc-29" name="workClrCd" value="GREEN" class="searchOption"><label for="mc-29" class="mc-5"></label>
-								<input type="checkbox" id="mc-30" name="workClrCd" value="SKY" class="searchOption"><label for="mc-30" class="mc-6"></label>
+							 	<input type="checkbox" id="mc-30" name="workClrCd" value="SKY" class="searchOption"><label for="mc-30" class="mc-6"></label>
 								<input type="checkbox" id="mc-31" name="workClrCd" value="BLUE" class="searchOption"><label for="mc-31" class="mc-7"></label>
 								<input type="checkbox" id="mc-32" name="workClrCd" value="PURPLE" class="searchOption"><label for="mc-32" class="mc-8"></label>
 								<input type="checkbox" id="mc-33" name="workClrCd" value="BROWN" class="searchOption"><label for="mc-33" class="mc-9"></label>
@@ -648,6 +648,7 @@
 								<input type="checkbox" id="mc-35" name="workClrCd" value="GRAY" class="searchOption"><label for="mc-35" class="mc-11"></label>
 								<input type="checkbox" id="mc-36" name="workClrCd" value="BLACK" class="searchOption"><label for="mc-36" class="mc-12"></label>
 							 </div>
+							 
 							 <!-- <div style="padding-top:30px" class="color-box">
 								<input type="radio" id="mc-bold" name="workClrCd-1" value="bold"><label for="mc-bold" class="mc-1 mc-bold active"></label>
 							 </div> -->
@@ -1018,7 +1019,7 @@
 		     		
 		     			
 		     		
-		     		$(".grid").append(html).triger("create");
+		     		$(".grid").append(html).trigger("create");
 		     		masonryLayout();
 	     		}
 	     		
