나의 작품 응찰수 / 응찰가격 수정

--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -1018,7 +1018,7 @@
 		     		
 		     			
 		     		
-		     		$(".grid").append(html).triger("create");
+		     		$(".grid").append(html).trigger("create");
 		     		masonryLayout();
 	     		}
 	     		
