--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWorkList.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWorkList.html
@@ -578,8 +578,8 @@ function workList(callback){
     					workListHtml += '		<img src="'+result[i].workMainImgUrl+'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
     					workListHtml += '		<div class="item-ho" onclick="dealDetail('+result[i].dealSq+')" style="cursor:pointer;">';
     					workListHtml += '			<p>'+result[i].dealStrtDate+' – '+result[i].dealEndngDate+'</p>';
-    					if(result[i].bidcnt != null && result[i].bidcnt != ""){
-    						workListHtml += '			<p>응찰수 : '+result[i].bidcnt+'</p>';
+    					if(result[i].bidCnt != null && result[i].bidCnt != ""){
+    						workListHtml += '			<p>응찰수 : '+result[i].bidCnt+'</p>';
     					}else{
     						workListHtml += '			<p>응찰수 : 0</p>';
     					}
