--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -103,9 +103,9 @@
 						<div class="swiper-wrapper">
 						
 						    <!--1006 배너추가-->
-							<div class="swiper-slide" align="center" style="background-color:#0B1538;">
+							<!-- <div class="swiper-slide" align="center" style="background-color:#0B1538;">
 								<a href="https://promo.dealing-art.com/dae/list" target="_blank"><img src="resources/img/banner-18_pc.png" /></a>
-							</div>
+							</div> -->
 							
 							<div class="swiper-slide" align="center" style="background-color:#6094CE;">
 								<!-- <img src="resources/img/banner-11_pc.jpg" onclick="javascript:location.href='/event';" style="cursor:pointer;"/> -->
@@ -134,9 +134,9 @@
 					<div class="swiper mySwiper">
 						<div class="swiper-wrapper">
 							
-							<div class="swiper-slide">
+							<!-- <div class="swiper-slide">
 								<a href="https://promo.dealing-art.com/dae/list" target="_blank"><img src="resources/img/banner-18_pc.png" /></a>
-							</div>
+							</div> -->
 							
 							<div class="swiper-slide">
 								<img src="resources/img/banner-16_pc.jpg" onclick="javascript:location.href='/event';" style="cursor:pointer;"/>
@@ -171,9 +171,9 @@
 					<div class="swiper mySwiper">
 						<div class="swiper-wrapper">
 						
-							<div class="swiper-slide">
+							<!-- <div class="swiper-slide">
 								<a href="https://promo.dealing-art.com/dae/list" target="_blank"><img src="resources/img/banner-18_mobile.png"/></a>
-							</div>
+							</div> -->
 							
 							<div class="swiper-slide">
 								<img src="resources/img/banner-16_mobile.jpg" onclick="javascript:location.href='/event';" style="cursor:pointer;"/>
