--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
@@ -493,6 +493,9 @@ function myDealSearchList(){
     				if(myDealList[i].buyMbrSq == null && myDealList[i].sellMbrSq != sMbrSqVal){ //경매중이면
     					myDealListHtml += '		<img src="'+ myDealList[i].workMainImgUrl+'" dealSq="'+ myDealList[i].dealSq+'" onclick="myDealDetailBuy(this)"/>';
     				}
+    				if(myDealList[i].buyMbrSq != sMbrSqVal && myDealList[i].sellMbrSq != sMbrSqVal){ //낙찰자가 아니면
+    					myDealListHtml += '		<img src="'+ myDealList[i].workMainImgUrl+'" dealSq="'+ myDealList[i].dealSq+'"/>';
+    				}
     				if(myDealList[i].dealTypCd == "A"){ //경매면 응찰 히스토리 버튼 추가
     					myDealListHtml += '		<button type="button" class="btns-4" onclick="bidHistory('+myDealList[i].dealSq+')">응찰 히스토리</button>';
     				}
@@ -651,6 +654,10 @@ function myDealSearchList(){
 	    					myDealListHtml += '					낙찰 되었습니다!!!<br>2차 결제가 완료되었습니다.';
 	    					myDealListHtml += '					<span>구매확정</span>';
 	    				}
+	    				if(myDealList[i].buyMbrSq != sMbrSqVal && myDealList[i].dealSttsCd != "ST" && myDealList[i].dealSttsCd != "FB"){ //유찰자이면
+	    					myDealListHtml += '					아쉽게도 낙찰에 실패하였습니다.';
+	    					myDealListHtml += '					<span>경매 종료</span>';
+	    				}
 	    				
 	    				if(myDealList[i].sellMbrSq == sMbrSqVal && myDealList[i].sellPaymntSttsCd == "2PW" && myDealList[i].dealSttsCd == "TC"){ //판매자이면서 2차 결제 완료 상태면
 	    					myDealListHtml += '					낙찰 되었습니다!!!<br>판매자 결제를 진행해주세요.';
@@ -685,6 +692,7 @@ function myDealSearchList(){
 	    					myDealListHtml += '					유찰되었습니다.';
 	    					myDealListHtml += '					<span>유찰</span>';
 	    				}
+
 	    				myDealListHtml += '				</p>';
     				}
     				if(myDealList[i].dealTypCd == "S"){
