2차 결제 부가서비스 개발

--- a/src/main/resources/templates/thymeleaf/myPageLeft.html
+++ b/src/main/resources/templates/thymeleaf/myPageLeft.html
@@ -95,7 +95,7 @@ $(document).ready(function(){
 		const url = new URL(window.location.href);
 		const urlParam = url.searchParams;
 
-		if(url.pathname == "/myDealDetailBuy2" || url.pathname == "/myDealDetailSell2"){
+		if(url.pathname == "/myDealDetailBuy" || url.pathname == "/myDealDetailSell"){
 			
 			$(".con-right").hide();
 			$(".con-left2").hide();
