--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy_backup.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy_backup.html
@@ -311,170 +311,7 @@
 								</div>
 							</div>
 							
-							<!-- 2차 결제 부가서비스 선택 전 -->
-							<div id="1PC" style="display:none;">
-								<div class="med">
-									<h2 class="h2-con">운송선택</h2>
-								</div>
-								<div class="myd-box">
-									<div class="myd-box-1">
-										<div id="collapse1" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading1">
-											<div class="panel-body">
-												<input type="radio" id="r1" name="buyTrnsprtTypCd" value="P"/>
-												<label for="r1"><span></span>프리미엄 운송</label><span>(1,000만원 이상 작품 권장)</span>
-												<button onclick="$('#pToggle').toggle(); $('#gToggle').hide(); $('#dToggle').hide();"><img src="resources/img/ba/me-icon.png"></button><br/>
-	
-												<!--0901_프리미엄운송-->
-												<div id="pToggle" style="display:none" class="div_toggle">
-													<div class="toggle_box1">
-														<div class="toggle_bar1">프리미엄 운송</div>
-														<div class="toggle_close" onclick="$('#pToggle').hide();"><img src="resources/img/ba/icon-end_1.png"></div>
-													</div>
-													<div class="toggle_con1">
-														<table>
-															<thead>
-																<tr>
-																	<td style="background-color:#fbfbfb; text-align:center; font-weight:bold;">프리미엄 운송(편도)</td>
-																	<td style="background-color:#fbfbfb; text-align:center; font-weight:bold;">수도권</td>
-																	<td style="background-color:#fbfbfb; text-align:center; font-weight:bold;">비수도권</td>
-																</tr>
-															</thead>
-															<tbody>
-																<tr>
-																	<td>운송비</td>
-																	<td>130,000</td>
-																	<td>297,000</td>
-																</tr>
-																<tr>
-																	<td>기본 포장비</td>
-																	<td>8,000</td>
-																	<td>8,000</td>
-																</tr>
-																<tr>
-																	<td>작품 컨디션 체크</td>
-																	<td>35,000</td>
-																	<td>35,000</td>
-																</tr>
-																<tr>
-																	<td>운송 보험</td>
-																	<td>46,000</td>
-																	<td>34,000</td>
-																</tr>
-																<tr>
-																	<td style="text-decoration:underline; font-weight:bold;">합계 (vat 별도)</td>
-																	<td style="text-decoration:underline; font-weight:bold;">219,000</td>
-																	<td style="text-decoration:underline; font-weight:bold;">374,000</td>
-																</tr>
-															</tbody>
-														</table>
-													</div>
-												</div>
-	
-												<input type="radio" id="r2" name="buyTrnsprtTypCd" value="G"/>
-												<label for="r2"><span></span>일반 운송</label>
-												<button onclick="$('#gToggle').toggle(); $('#pToggle').hide(); $('#dToggle').hide();"><img src="resources/img/ba/me-icon.png"></button><br/>
-												
-												<div id="gToggle" style="display:none" class="div_toggle">
-													<div class="toggle_box1">
-														<div class="toggle_bar1">일반 운송</div>
-														<div class="toggle_close" onclick="$('#gToggle').hide();"><img src="resources/img/ba/icon-end_1.png"></div>
-													</div>
-													<div class="toggle_con1">
-														<table>
-															<thead>
-																<tr>
-																	<td style="background-color:#fbfbfb; text-align:center; font-weight:bold;">일반 운송(편도)</td>
-																	<td style="background-color:#fbfbfb; text-align:center; font-weight:bold;">예상 가격 (vat별도)</td>
-																	<td style="background-color:#fbfbfb; text-align:center; font-weight:bold;">비고</td>
-																</tr>
-															</thead>
-															<tbody>
-																<tr>
-																	<td>서울특별시</td>
-																	<td>70,000</td>
-																	<td rowspan="11" style="color:#e9625c; font-weight:bold;">포장포함<br/>(운송보험, 컨디션체크 리포트 이용불가)<!-- <br/>우류세에 따라 가격이 변동될 수 있습니다. --></td>
-																</tr>
-																<tr>
-																	<td>경기도 1권역<br/>
-																		(김포, 고양, 의정보 등)
-																	</td>
-																	<td>90,000</td>
-																</tr>
-																<tr>
-																	<td>경기도 2권역<br/>
-																		(인천, 부천, 안양 등)
-																	</td>
-																	<td>180,000</td>
-																</tr>
-																<tr>
-																	<td>대전</td>
-																	<td>350,000</td>
-																</tr>
-																<tr>
-																	<td>강원도</td>
-																	<td>400,000</td>
-																</tr>
-																<tr>
-																	<td>대구</td>
-																	<td>450,000</td>
-																</tr>
-																<tr>
-																	<td>광주, 경주, 포항</td>
-																	<td>470,000</td>
-																</tr>
-																<tr>
-																	<td>부산, 울산</td>
-																	<td>570,000</td>
-																</tr>
-																<tr>
-																	<td>목포</td>
-																	<td>580,000</td>
-																</tr>
-																<tr>
-																	<td>남해</td>
-																	<td>620,000</td>
-																</tr>
-															</tbody>
-														</table>
-													</div>
-												</div>
-												
-												<input type="radio" id="r3" name="buyTrnsprtTypCd" value="D"/>
-												<label for="r3"><span></span>셀프 운송</label>
-												<button onclick="$('#dToggle').toggle(); $('#pToggle').hide(); $('#gToggle').hide();"><img src="resources/img/ba/me-icon.png"></button><br/>
-												
-												<div id="dToggle" style="display:none" class="div_toggle">
-													<div class="toggle_box1">
-														<div class="toggle_bar1">셀프 운송</div>
-														<div class="toggle_close" onclick="$('#dToggle').hide();"><img src="resources/img/ba/icon-end_1.png"></div>
-													</div>
-													<div class="toggle_con1">
-														<table>
-															<thead>
-																<tr>
-																	<td style="background-color:#fbfbfb; text-align:center; font-weight:bold;">스토리지</td>
-																	<td style="background-color:#fbfbfb; text-align:center; font-weight:bold;">주소</td>
-																	<td style="background-color:#fbfbfb; text-align:center; font-weight:bold;">운영 시간</td>
-																</tr>
-															</thead>
-															<tbody>
-																<tr>
-																	<td>서초 스토리지</td>
-																	<td>서울시 서초구 방배동 226, 3층</td>
-																	<td>월요일 ~ 토요일<br/>(오전 10시 ~ 오후 7시)</td>
-																</tr>
-															</tbody>
-														</table>
-													</div>
-												</div>
-												
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							
-							<!-- 2차 결제0 부가서비스 선택 후 -->		
+							<!-- 2차 결제 -->		
 							<div id="2PW" style="display:none;">
 								<div class="med">
 									<h2 class="h2-con">결제정보</h2>
@@ -692,10 +529,8 @@
 							</div>
 					
 							<div class="bat-box5">
-							
 								<!-- <a href="#" class="ba-btn1" id="btn_payment" style="display:none;" onclick="call(200)"><span>결제하기</span></a> -->
-								<a href="javascript:void(0);" class="ba-btn1" id="btn_payment" style="display:none;" onclick="btn_payment()"><span>결제하기</span></a>
-								<a href="javascript:void(0);" class="ba-btn1" id="btn_dealingCall" style="display:none;" onclick="btn_dealingCall()"><span>딜링콜 요청</span></a>
+								<a href="#" class="ba-btn1" id="btn_payment" style="display:none;" onclick="btn_payment()"><span>결제하기</span></a>
 								<a href="javascript:history.back();" class="ba-btn2" ><span>돌아가기</span></a>
 								
 							</div>
@@ -749,7 +584,7 @@
 		<div class="modal-content">
 			<div class="modal-header" style="height: 0; min-height: 0; padding: 0;">
 				<div class="baegs">
-				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="resources/img/ba/icon-end_1.png" /></div>
+				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="resources/img/ba/icon-end.png" /></div>
 				</div>
 
 			</div>
@@ -825,39 +660,26 @@
 		</div>
 	</div>
 </div>
-
-<!-- 딜링콜요청 -->
-<div class="modal fade modal-s" id="callModal" tabindex="-1" role="dialog" aria-labelledby="callModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
-	<div class="modal-dialog modal-baeg max-w480">
-		<div class="modal-content">
-			<div class="modal-header" style="padding: 0;min-height: 0;height: 0;">
-				<!-- <div class="baegs">
-				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="resources/img/ba/icon-end_1.png" /></div>
-				</div> -->
-			</div>
-			<div class="modal-body login-body">
-				<div>
-					<div class="call_box">
-						딜링콜 요청이 완료 되었습니다.
-					</div>
-					<div class="call_box_con1">
-						<li>딜링콜 운송 서비스 안내를 받은 후 결제 페이지가 활성화 되며 이 후 48시간 이내에 결제를 진행해야 합니다.</li>
-						<li>딜링콜을 통해 안내 받은 부가서비스(작업 할증, 설치 등)에 회원님의 요청이 있을 경우 비용이 추가 될 수 있습니다. </li>
-						<li>작품가/운송서비스 미결제, 운송일정조율에 대한 응답거부, 작품운송의 인계 및 수취거부, 미술품 또는 보증서의 허위, 변조, 조작, 딜링아트 서비스 이용약관에 위반되는 행위가 발생되는 경우 거래가 취소 될 수 있습니다. </li>
-						<li>미술품의 소유권은 구매자에게 운송이 완료 되기 전까지 판매자에게 있습니다. </li>
-						<li>해외운송은 불가하며 제주도, 도서산간 지역, 조형작품은 별도문의를 통해 안내해드립니다.</li>
-					</div>
-					
-					<div class="baeg-btn mg_t30">
-						<a href="#"><button type="button" class="baeg-b1" data-dismiss="modal" aria-label="Close">확인</button></a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-
 <script th:inline="javascript">
+$(function(){
+	$(".con-right").hide();
+	$(".con-left2").hide();
+	
+	const url = new URL(window.location.href);
+	const urlParam = url.searchParams;
+	console.log("MbrSqVal :"+sMbrSqVal);
+	if(sMbrSqVal != urlParam.get('mbrSq')){
+		//location.href="/main";
+		 modalAlertShow("잘못된 접근입니다. 메인페이지로 이동합니다.", "main");
+		return;
+	} else {
+		$(".con-right").show();
+		$(".con-left2").show();
+	}
+	
+	//$(".con-right").show();
+});
+
 var result = /*[[${result}]]*/ 'default';
 var fee = 0; //거래 수수료
 var feeTax = 0; //거래 수수료 부과세
@@ -929,29 +751,14 @@ jQuery(document).ready(function() {
 		feeCal();
 		getCouponList("DD"); //거래 수수료 할인 쿠폰 목록 가져오기
 	}
-	if(result.dealInfo.buyPaymntSttsCd == "1PC" && result.dealInfo.dealSttsCd == "TC"){ //2차 결제 부가서시브 선택 전
-		$("#dealSttsCdDetail").text("구매자 배송서비스 선택 중입니다.");
-		$("#dealSttsCdDetail").append("<span>배송서비스 선택</span>"); 
-		$("#1PC").css("display", ""); //2차 결제 div
-		$("#btn_dealingCall").css("display", ""); //딜링콜 요청 버튼
-		
-		//$("#paymethod").css("display", "");
-		//$("#btn_payment").css("display", "");
-		//getCouponList("TD"); //운송 수수료 할인 쿠폰 목록 가져오기
-		//if(result.vacctInfo.payMethod != null){
-			//$("#VACCT").css("display", "");
-			//$("#2PW").css("display", "none"); //2차 결제 div
-			//$("#paymethod").css("display", "none");
-			//$("#btn_payment").css("display", "none");
-		//}
-	}
 	if(result.dealInfo.buyPaymntSttsCd == "2PW" && result.dealInfo.dealSttsCd == "TC"){ //2차 결제 미완료면
 		$("#dealSttsCdDetail").text("구매자 2차 결제를 대기중입니다.");
 		$("#dealSttsCdDetail").append("<span>2차 결제 대기</span>"); 
-		$("#2PW").css("display", ""); //2차 결제 div
-		$("#paymethod").css("display", "");
-		$("#btn_payment").css("display", "");
-		getCouponList("TD"); //운송 수수료 할인 쿠폰 목록 가져오기
+		//$("#2PW").css("display", ""); //2차 결제 div
+		//$("#paymethod").css("display", "");
+		//$("#btn_payment").css("display", "");
+		//getCouponList("TD"); //운송 수수료 할인 쿠폰 목록 가져오기
+		modalAlertShow("현재 2차 결제 시스템 변경 작업중입니다. 2차 결제는 1533-3024로 문의주세요.");
 		if(result.vacctInfo.payMethod != null){
 			$("#VACCT").css("display", "");
 			$("#2PW").css("display", "none"); //2차 결제 div
@@ -1091,48 +898,6 @@ function updateNewAddr(){
             alert("오류 발생" + error);
         }
 	}); 
-}
-/*
- * 딜링 콜 요청 버튼 클릭시
- */
- function btn_dealingCall(){
-	var param = new Object();
-	if($('input[name="buyTrnsprtTypCd"]:checked').val() != null && $('input[name="buyTrnsprtTypCd"]:checked').val() != ""){
-		
-		param.buyTrnsprtTypCd = $('input[name="buyTrnsprtTypCd"]:checked').val();
-		param.dealSq = result.dealInfo.dealSq;
-		
-		$.ajax({
-			type: "POST",
-			contentType: 'application/json',
-	        url: "/buyTrnsprtTypCdUpdate",
-	        dataType: 'json',
-	        data: JSON.stringify(param),
-	        async: false,
-			success:function(data){
-				if(data.result != null && data.result > 0){
-					$("#callModal").modal("show");
-				}else{
-					if(!isMobile){
-						modalAlertShow("새로고침 후 다시 시도해주세요.");
-					}else{
-						alert("새로고침 후 다시 시도해주세요.");
-					}
-				}
-			},
-			error: function(error) {
-	            alert("오류 발생" + error);
-	        }
-		}); 
-		
-		
-	}else{
-		if(!isMobile){
-			modalAlertShow("운송 서비스를 선택해주세요.");
-		}else{
-			alert("운송 서비스를 선택해주세요.");
-		}
-	}
 }
 /*
  * 결제 수단 클릭시
@@ -1932,14 +1697,7 @@ $(window).on("resize", function () {
      }
 }).resize();
 
-//배송서비스 물음표 토글팝업
-$("#btn_gToggle").click(function (){
-	$("#Toggle").toggle();
-});
 
-$('#toggle_close').click(function() {
-	 $('#Toggle').hide(); 
-});
 
 $(function () {
   $(".elm").hover(
