--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -14,10 +14,10 @@
 	
 	<meta name="author" content="">
 	<meta name="keywords" content="미술,아트,경매,수수료,정찰,운송,보험,직거래,dealingart">
-	<meta name="description" content="개인간 미술품 거래 마켓플레이스">
-	<meta property="og:description" content="개인간 미술품 거래 마켓플레이스">
+	<meta name="description" content="미술품 거래의 새로운 트렌드">
+	<meta property="og:description" content="미술품 거래의 새로운 트렌드">
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="DeailngArt">
+	<meta property="og:title" content="딜링아트">
 	<meta property="og:image" content="https://www.dealing-art.com/resources/img/DA_logo_og.png">
 	<meta property="og:url" content="https://www.dealing-art.com">
 	
