--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -104,19 +104,9 @@
 					<div class="swiper mySwiper">
 						<div class="swiper-wrapper">
 						
-						    <!--1006 배너추가-->
-							<!-- <div class="swiper-slide" align="center" style="background-color:#0B1538;">
-								<a href="https://promo.dealing-art.com/dae/list" target="_blank"><img src="resources/img/banner-18_pc.png" /></a>
-							</div> -->
-							
-							<div class="swiper-slide" align="center" style="background-color:#6094CE;">
-								<!-- <img src="resources/img/banner-11_pc.jpg" onclick="javascript:location.href='/event';" style="cursor:pointer;"/> -->
-								<img src="resources/img/banner-16_pc.jpg" onclick="javascript:location.href='/event';" style="cursor:pointer;"/>
+							<div class="swiper-slide" align="center" style="background-color:#00AB8B;">
+								<a href="https://promo.dealing-art.com/dp/character_scene" target="_blank"><img src="resources/img/banner-17_pc.png" border="0"/></a>
 							</div>
-							<!-- 이벤트 베너 2022-07-22 -->
-							<!-- <div class="swiper-slide" align="center" style="background-color:#f0eddc;">
-								<img src="resources/img/banner-15_pc.jpg" class="myCollection" style="cursor:pointer;"/>
-							</div> -->
 							<div class="swiper-slide" align="center" style="background-color:#ececec;">
 								<img src="resources/img/banner-12_pc.jpg" onclick="javascript:location.href='/insights';" style="cursor:pointer;"/>
 							</div>
@@ -135,23 +125,11 @@
 				<div class="main-banner">						
 					<div class="swiper mySwiper">
 						<div class="swiper-wrapper">
-							
-							<!-- <div class="swiper-slide">
-								<a href="https://promo.dealing-art.com/dae/list" target="_blank"><img src="resources/img/banner-18_pc.png" /></a>
-							</div> -->
+						
 							
 							<div class="swiper-slide">
-								<img src="resources/img/banner-16_pc.jpg" onclick="javascript:location.href='/event';" style="cursor:pointer;"/>
+								<a href="https://promo.dealing-art.com/dp/character_scene" target="_blank"><img src="resources/img/banner-17_pc.png" border="0"/></a>
 							</div>
-							<!-- 이벤트 베너 2022-07-22 -->
-							<!-- <div class="swiper-slide">
-								<img src="resources/img/banner-15_pc.jpg" class="myCollection" style="cursor:pointer;"/>
-							</div> -->
-							<!--
-							<div class="swiper-slide">
-								<img src="resources/img/banner-11_tablet.jpg" onclick="javascript:location.href='/totalSearch_work?searchKeyword=사전출품';" style="cursor:pointer;"/>
-							</div>
-							-->
 							<div class="swiper-slide">
 								<img src="resources/img/banner-12_tablet.jpg" onclick="javascript:location.href='/insights?mgzSq=60';" style="cursor:pointer;"/>
 							</div>
@@ -178,7 +156,7 @@
 							</div> -->
 							
 							<div class="swiper-slide">
-								<img src="resources/img/banner-16_mobile.jpg" onclick="javascript:location.href='/event';" style="cursor:pointer;"/>
+								<a href="https://promo.dealing-art.com/dp/character_scene" target="_blank"><img src="resources/img/banner-17_mobile.png" border="0" /></a>
 							</div>
 							
 							<!-- 이벤트 베너 2022-07-22 -->
