빅배너 추가

--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -531,7 +531,7 @@ $("#findIdLoginBtn").click(function() {
 				</div>
 			</div>
 			<div class="modal-body login-body">
-				<img src="resources/img/guide_img1.png"  class="mo_width"/>
+				<img src="resources/img/guide_pop_img.png"  class="mo_width"/>
 			</div>
 		</div>
 	</div>
@@ -547,7 +547,8 @@ $("#findIdLoginBtn").click(function() {
 				</div>
 			</div>
 			<div class="modal-body login-body">
-				<img src="resources/img/guide_img2.png"  class="mo_width"/>
+				<!-- <img src="resources/img/guide_img2.png"  class="mo_width"/> -->
+				<img src="resources/img/guide_pop_img.png"  class="mo_width"/>
 			</div>
 		</div>
 	</div>
