--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -103,10 +103,16 @@
 				<div class="main-banner">						
 					<div class="swiper mySwiper">
 						<div class="swiper-wrapper">
-						
+							
+							
+							<div class="swiper-slide" align="center" style="background-color:#d8d6c8;">
+								<a href="https://promo.dealing-art.com/dp/k_art" target="_blank"><img src="resources/img/banner-19_pc.png" border="0"/></a>
+							</div>
+							
 							<div class="swiper-slide" align="center" style="background-color:#00AB8B;">
 								<a href="https://promo.dealing-art.com/dp/character_scene" target="_blank"><img src="resources/img/banner-17_pc.png" border="0"/></a>
 							</div>
+							
 							<div class="swiper-slide" align="center" style="background-color:#ececec;">
 								<img src="resources/img/banner-12_pc.jpg" onclick="javascript:location.href='/insights';" style="cursor:pointer;"/>
 							</div>
@@ -126,7 +132,9 @@
 					<div class="swiper mySwiper">
 						<div class="swiper-wrapper">
 						
-							
+							<div class="swiper-slide">
+								<a href="https://promo.dealing-art.com/dp/k_art" target="_blank"><img src="resources/img/banner-19_pc.png" border="0"/></a>
+							</div>
 							<div class="swiper-slide">
 								<a href="https://promo.dealing-art.com/dp/character_scene" target="_blank"><img src="resources/img/banner-17_pc.png" border="0"/></a>
 							</div>
@@ -150,24 +158,15 @@
 				<div class="main-banner">						
 					<div class="swiper mySwiper">
 						<div class="swiper-wrapper">
-						
-							<!-- <div class="swiper-slide">
-								<a href="https://promo.dealing-art.com/dae/list" target="_blank"><img src="resources/img/banner-18_mobile.png"/></a>
-							</div> -->
+							
+							<div class="swiper-slide">
+								<a href="https://promo.dealing-art.com/dp/k_art" target="_blank"><img src="resources/img/banner-19_mobile.png" border="0" /></a>
+							</div>
 							
 							<div class="swiper-slide">
 								<a href="https://promo.dealing-art.com/dp/character_scene" target="_blank"><img src="resources/img/banner-17_mobile.png" border="0" /></a>
 							</div>
-							
-							<!-- 이벤트 베너 2022-07-22 -->
-							<!-- <div class="swiper-slide">
-								<img src="resources/img/banner-15_mobile.jpg" class="myCollection" style="cursor:pointer;"/>
-							</div> -->
-							<!-- 
-							<div class="swiper-slide">
-								<img src="resources/img/banner-11_mobile.jpg" onclick="javascript:location.href='/totalSearch_work?searchKeyword=사전출품';" style="cursor:pointer;"/>
-							</div>
-							 -->
+														
 							<div class="swiper-slide">
 								<img src="resources/img/banner-12_mobile.jpg" onclick="javascript:location.href='/insights?mgzSq=60';" style="cursor:pointer;"/>
 							</div>
