--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
@@ -19,6 +19,8 @@
 	<meta property="og:image" content="https://www.dealing-art.com/resources/img/DA_logo_og.png">
 	<meta property="og:url" content="https://www.dealing-art.com">
 	
+	<meta name="robots"content="noindex">
+	
 	<!-- google -->
     <meta name="google-site-verification" content="EKiW_Lm3Qw-DYnLT9qokEpZT2Sa8tSQuVWhVEvs4kPk" />
     <!-- faceBook -->
