--- a/src/main/resources/templates/thymeleaf/fo/mgz/exhibition.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/exhibition.html
@@ -96,7 +96,7 @@
 						<div class="mgz-link">
 							<ul class="mgz-ul">
 								<li><a href="/insights">Insights</a></li>
-								<li><a href="/media">Media</a></li>
+								<li><a href="/media">Artist Film</a></li>
 								<li class="active"><a href="/exhibition">Exhibition</a></li>
 							</ul>
 						</div>
