--- a/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
@@ -128,7 +128,7 @@
 						<div class="mgz-link">
 							<ul class="mgz-ul">
 								<li class="active"><a href="/insights">Insights</a></li>
-								<li><a href="/media">Media</a></li>
+								<li><a href="/media">Artist Film</a></li>
 								<li><a href="/exhibition">Exhibition</a></li>
 							</ul>
 						</div>
