--- a/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
@@ -1983,6 +1983,18 @@ $(".home-on").click(function() {
 	
 	<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 	
+<!-- 네이버 광고 로그분석 추적 코드 -->
+<script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script> 
+<script type="text/javascript">
+if(!wcs_add) var wcs_add = {}; 
+wcs_add["wa"] = "s_17cc71bb9b8f";
+if (!_nasa) var _nasa={}; 
+if (window.wcs) {
+wcs.inflow("www.dealing-art.com"); 
+wcs_do(_nasa);
+}
+</script>
+	
 </body>
 
 </html>
