--- a/src/main/resources/templates/thymeleaf/fo/mgz/media.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/media.html
@@ -495,6 +495,18 @@
  
  
 </script>
+
+<!-- 네이버 광고 로그분석 추적 코드 -->
+<script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script> 
+<script type="text/javascript">
+if(!wcs_add) var wcs_add = {}; 
+wcs_add["wa"] = "s_17cc71bb9b8f";
+if (!_nasa) var _nasa={}; 
+if (window.wcs) {
+wcs.inflow("www.dealing-art.com"); 
+wcs_do(_nasa);
+}
+</script>
 	
 </body>
 
