--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -108,13 +108,13 @@
 							<div class="swiper-slide" align="center" style="background-color:#d8d6c8;">
 								<a href="https://promo.dealing-art.com/dp/k_art" target="_blank"><img src="resources/img/banner-19_pc.png" border="0"/></a>
 							</div>
-							
+							<!-- 
 							<div class="swiper-slide" align="center" style="background-color:#00AB8B;">
 								<a href="https://promo.dealing-art.com/dp/character_scene" target="_blank"><img src="resources/img/banner-17_pc.png" border="0"/></a>
 							</div>
-							
+							 -->
 							<div class="swiper-slide" align="center" style="background-color:#ececec;">
-								<img src="resources/img/banner-12_pc.jpg" onclick="javascript:location.href='/insights';" style="cursor:pointer;"/>
+								<img src="resources/img/banner-12_pc.png" onclick="javascript:location.href='/insights';" style="cursor:pointer;"/>
 							</div>
 							<div class="swiper-slide" align="center" style="background-color:#fe4d01;">
 								<img src="resources/img/banner-13_pc.jpg" onclick="javascript:location.href='/media';" style="cursor:pointer;"/>
@@ -135,11 +135,13 @@
 							<div class="swiper-slide">
 								<a href="https://promo.dealing-art.com/dp/k_art" target="_blank"><img src="resources/img/banner-19_pc.png" border="0"/></a>
 							</div>
+							<!-- 
 							<div class="swiper-slide">
 								<a href="https://promo.dealing-art.com/dp/character_scene" target="_blank"><img src="resources/img/banner-17_pc.png" border="0"/></a>
 							</div>
+							 -->
 							<div class="swiper-slide">
-								<img src="resources/img/banner-12_tablet.jpg" onclick="javascript:location.href='/insights?mgzSq=60';" style="cursor:pointer;"/>
+								<img src="resources/img/banner-12_pc.png" onclick="javascript:location.href='/insights?mgzSq=60';" style="cursor:pointer;"/>
 							</div>
 							<div class="swiper-slide">
 								<img src="resources/img/banner-13_tablet.jpg" onclick="javascript:location.href='/media';" style="cursor:pointer;"/>
@@ -162,13 +164,13 @@
 							<div class="swiper-slide">
 								<a href="https://promo.dealing-art.com/dp/k_art" target="_blank"><img src="resources/img/banner-19_mobile.png" border="0" /></a>
 							</div>
-							
+							<!--
 							<div class="swiper-slide">
 								<a href="https://promo.dealing-art.com/dp/character_scene" target="_blank"><img src="resources/img/banner-17_mobile.png" border="0" /></a>
 							</div>
-														
+							  -->							
 							<div class="swiper-slide">
-								<img src="resources/img/banner-12_mobile.jpg" onclick="javascript:location.href='/insights?mgzSq=60';" style="cursor:pointer;"/>
+								<img src="resources/img/banner-12_mobile.png" onclick="javascript:location.href='/insights?mgzSq=60';" style="cursor:pointer;"/>
 							</div>
 							<div class="swiper-slide">
 								<img src="resources/img/banner-13_mobile.jpg" onclick="javascript:location.href='/media';" style="cursor:pointer;"/>
