--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -113,7 +113,7 @@
 								<a href="https://promo.dealing-art.com/dp/character_scene" target="_blank"><img src="resources/img/banner-17_pc.png" border="0"/></a>
 							</div>
 							 -->
-							<div class="swiper-slide" align="center" style="background-color:#ececec;">
+							<div class="swiper-slide" align="center" style="background-color:#ffffff;">
 								<img src="resources/img/banner-12_pc.png" onclick="javascript:location.href='/insights';" style="cursor:pointer;"/>
 							</div>
 							<div class="swiper-slide" align="center" style="background-color:#fe4d01;">
@@ -141,7 +141,7 @@
 							</div>
 							 -->
 							<div class="swiper-slide">
-								<img src="resources/img/banner-12_pc.png" onclick="javascript:location.href='/insights?mgzSq=60';" style="cursor:pointer;"/>
+								<img src="resources/img/banner-12_pc.png" onclick="javascript:location.href='/insights';" style="cursor:pointer;"/>
 							</div>
 							<div class="swiper-slide">
 								<img src="resources/img/banner-13_tablet.jpg" onclick="javascript:location.href='/media';" style="cursor:pointer;"/>
@@ -170,7 +170,7 @@
 							</div>
 							  -->							
 							<div class="swiper-slide">
-								<img src="resources/img/banner-12_mobile.png" onclick="javascript:location.href='/insights?mgzSq=60';" style="cursor:pointer;"/>
+								<img src="resources/img/banner-12_mobile.png" onclick="javascript:location.href='/insights';" style="cursor:pointer;"/>
 							</div>
 							<div class="swiper-slide">
 								<img src="resources/img/banner-13_mobile.jpg" onclick="javascript:location.href='/media';" style="cursor:pointer;"/>
