--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -104,15 +104,13 @@
 					<div class="swiper mySwiper">
 						<div class="swiper-wrapper">
 							
+							<div class="swiper-slide" align="center" style="background-color:#ffffff;">
+								<a href="https://promo.dealing-art.com/dp/collectors-loving-ittem" target="_blank"><img src="resources/img/banner-20_pc.jpg" border="0"/></a>
+							</div>
 							
 							<div class="swiper-slide" align="center" style="background-color:#d8d6c8;">
 								<a href="https://promo.dealing-art.com/dp/k_art" target="_blank"><img src="resources/img/banner-19_pc.png" border="0"/></a>
 							</div>
-							<!-- 
-							<div class="swiper-slide" align="center" style="background-color:#00AB8B;">
-								<a href="https://promo.dealing-art.com/dp/character_scene" target="_blank"><img src="resources/img/banner-17_pc.png" border="0"/></a>
-							</div>
-							 -->
 							<div class="swiper-slide" align="center" style="background-color:#ffffff;">
 								<img src="resources/img/banner-12_pc.png" onclick="javascript:location.href='/insights';" style="cursor:pointer;"/>
 							</div>
@@ -132,14 +130,12 @@
 					<div class="swiper mySwiper">
 						<div class="swiper-wrapper">
 						
+							<div class="swiper-slide" align="center" style="background-color:#ffffff;">
+								<a href="https://promo.dealing-art.com/dp/collectors-loving-ittem" target="_blank"><img src="resources/img/banner-20_pc.jpg" border="0"/></a>
+							</div>
 							<div class="swiper-slide">
 								<a href="https://promo.dealing-art.com/dp/k_art" target="_blank"><img src="resources/img/banner-19_pc.png" border="0"/></a>
 							</div>
-							<!-- 
-							<div class="swiper-slide">
-								<a href="https://promo.dealing-art.com/dp/character_scene" target="_blank"><img src="resources/img/banner-17_pc.png" border="0"/></a>
-							</div>
-							 -->
 							<div class="swiper-slide">
 								<img src="resources/img/banner-12_pc.png" onclick="javascript:location.href='/insights';" style="cursor:pointer;"/>
 							</div>
@@ -161,14 +157,14 @@
 					<div class="swiper mySwiper">
 						<div class="swiper-wrapper">
 							
+							<div class="swiper-slide" align="center" style="background-color:#ffffff;">
+								<a href="https://promo.dealing-art.com/dp/collectors-loving-ittem" target="_blank"><img src="resources/img/banner-20_mobile.jpg" border="0"/></a>
+							</div>
+							
 							<div class="swiper-slide">
 								<a href="https://promo.dealing-art.com/dp/k_art" target="_blank"><img src="resources/img/banner-19_mobile.png" border="0" /></a>
 							</div>
-							<!--
-							<div class="swiper-slide">
-								<a href="https://promo.dealing-art.com/dp/character_scene" target="_blank"><img src="resources/img/banner-17_mobile.png" border="0" /></a>
-							</div>
-							  -->							
+							
 							<div class="swiper-slide">
 								<img src="resources/img/banner-12_mobile.png" onclick="javascript:location.href='/insights';" style="cursor:pointer;"/>
 							</div>
