--- a/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
@@ -99,8 +99,12 @@
     
 </head>
 
-<body oncontextmenu="return false" ondragstart="return false" onselectstart="return false" >
+<body oncontextmenu="return false" ondragstart="return false" onselectstart="return false" id="mainPage">
+
 	<div class="wrap">
+	
+		<input type="hidden" id="pageStart">
+	
 		<th:block th:replace="thymeleaf/header :: headerFragment"></th:block>
 		
 		<script>
@@ -109,11 +113,10 @@
 				$("#lp_mgz9Dtl").css("font-size", "2.0em");
 				$(".text-huge").css("font-size", "1.2em");
 				
-			}	  
+			}	 
 		});	
 		</script>	
-		
-    
+	
 		<div class="body-wrap coll-mobile">
 			
 			<div class="contents">
@@ -137,7 +140,7 @@
 						
 						
 						<div class="text-center">
-							<button type="button" class="btn-more mg_t0"><span>more</span></button>
+							<button type="button" class="btn-more mg_t0" id="btnMore"><span>more</span></button>
 						</div>
 						
 					</div>
@@ -172,10 +175,18 @@
 	</div>
 </div>
 
-<script type="text/javascript">      
+<script type="text/javascript">  
+
+var pageStart = 0;
+var pageSize  = 6;
+
+$("#pageStart").val(pageStart);
 
 /* 파일업로드 */
 $(document).ready(function(){
+	
+	
+	selectMgz9List("IST",pageStart,pageSize);
 	
 	//$("#lp_mgz9Dtl_cntnt").removeAttr("style");	
 	
@@ -193,6 +204,7 @@ $(document).ready(function(){
 	
 }); 
 
+
 /*
  * MGZ9 목록 조회
  * PARAM : 
@@ -202,21 +214,23 @@ $(document).ready(function(){
 		EBI - EXHIBITION
  * RETURN : MGZ9 목록
  */
- function selectMgz9List(mgzTypCd){
+ function selectMgz9List(mgzTypCd,pageStart,page){
  	
  	$.ajax({
          type: "post",
          url: "/selectMgz9List",
          data:{
+        	 pagestart : pageStart,
+        	 page : page,
         	 mgzTypCd : mgzTypCd
  		},
          success: function(data) {
          	var mgz9List = null;
          	var mgz9ListHtml = "";
          	
-         	if(data.result != null && data.result.length > 0){
-         		mgz9List = data.result;	
-         		console.log(data);
+         	mgz9List = data.list.info;
+         	
+         	if(mgz9List != null && mgz9List.length > 0){
          		
          		for(var i=0; i<mgz9List.length; i++){
          			mgz9ListHtml += '<li>';
@@ -234,18 +248,39 @@ $(document).ready(function(){
 	         		mgz9ListHtml += '</li>';
              	}
          		
-             	$("#mgz9List").empty();
+         		if($("#pageStart").val() == 0) {
+         			var pageStartValue = parseInt($("#pageStart").val()) + pageSize;	
+         		} else {
+         			var pageStartValue = parseInt($("#pageStart").val()) + 3;
+         		}
+         		
+         		scrollPageStart = pageStartValue;  
+         		$("#pageStart").val(pageStartValue);
+         		
+             	//$("#mgz9List").empty();
              	$("#mgz9List").append(mgz9ListHtml).trigger("create");
+             	
+             	
+             	
          	}else{
          		modalAlertShow("검색 결과가 없습니다."); 
-         		$("#mgz9List").empty();
+         		//$("#mgz9List").empty();
          	}
          },           
          error: function(error) {
-             alert("오류 발생" + error);
+        	 var errorJson = JSON.stringify(error);
+             console.log(errorJson);
          }
  	});
  }
+ 
+//More Btn
+ $("#btnMore").on('click', function(){
+	 
+	 var pageStart = $("#pageStart").val();
+	 
+ 	selectMgz9List("IST",pageStart,3);
+ });
  
  
  var paramMz9 = location.search
@@ -257,6 +292,10 @@ $(document).ready(function(){
  if(getParam !="" && getParam != null){
 	selectMgz9Dtl(getParam);
  }
+ 
+ 
+ 
+
  
  /*
   * MGZ9 상세 조회
@@ -314,7 +353,8 @@ $(document).ready(function(){
           	}
           },           
           error: function(error) {
-              alert("오류 발생" + error);
+        	  var errorJson = JSON.stringify(error);
+              console.log(errorJson);
           }
   	});
   }
@@ -417,7 +457,7 @@ $(document).ready(function(){
   )
  });
  
- selectMgz9List("IST");
+
  /* 메뉴바 FIXED */
  if (jQuery(window).width() > 0) {
      jQuery(window).on("scroll",function(ev){
@@ -448,6 +488,9 @@ $(document).ready(function(){
  	$(".ck-widget").css("outline-style","none");
  	$(".ck-widget__selection-handle").css("display","none");
  }
+ 
+
+
 
  
 </script>
