--- a/src/main/resources/templates/thymeleaf/fo/mgz/media.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/media.html
@@ -81,9 +81,9 @@
 
 <body>
 	<div class="wrap">
-		<th:block th:replace="thymeleaf/header :: headerFragment"></th:block>
+			<th:block th:replace="thymeleaf/header :: headerFragment"></th:block>
 		<div class="body-wrap coll-mobile">
-			
+			<input type="hidden" id="pageStart">
 			<div class="contents">
 				<div class="mgz-wrap">
 					<div class="mgz-top mgz-bg-2">
@@ -105,7 +105,7 @@
 						
 						
 						<div class="text-center">
-							<button type="button" class="btn-more mg_t0"><span>more</span></button>
+							<button type="button" class="btn-more mg_t0" id="btnMore"><span>more</span></button>
 						</div>
 						
 					</div>
@@ -152,7 +152,18 @@
 </style>
 
 
-<script type="text/javascript">      
+<script type="text/javascript">    
+
+var pageStart = 0;
+var pageSize  = 6;
+
+$("#pageStart").val(pageStart);
+
+$(document).ready(function(){
+
+	selectMgz9List("MDA",pageStart,pageSize);
+
+}); 
 
 /*
  * MGZ9 목록 조회
@@ -163,25 +174,24 @@
 		EBI - EXHIBITION
  * RETURN : MGZ9 목록
  */
- function selectMgz9List(mgzTypCd){
+ function selectMgz9List(mgzTypCd,pageStart,page){
  	
  	$.ajax({
          type: "post",
          url: "/selectMgz9List",
          data:{
+        	 pagestart : pageStart,
+        	 page : page,
         	 mgzTypCd : mgzTypCd
  		},
          success: function(data) {
-         	
-        	console.log(data);
-        	 
+         	 
         	var mgz9List = null;
          	var mgz9ListHtml = "";
          	
-         	if(data.result != null && data.result.length > 0){
-         		mgz9List = data.result;
-         		
-         		
+         	mgz9List = data.list.info;
+         	
+         	if(mgz9List != null && mgz9List.length > 0){
          		
          		for(var i=0; i<mgz9List.length; i++){
          			console.log(mgz9List[i].mgzContent);
@@ -225,15 +235,27 @@
          		
              	}
          		
-             	$("#mgz9List").empty();
+         		if($("#pageStart").val() == 0) {
+         			var pageStartValue = parseInt($("#pageStart").val()) + pageSize;	
+         		} else {
+         			var pageStartValue = parseInt($("#pageStart").val()) + 3;
+         		}
+         		
+         		scrollPageStart = pageStartValue;  
+         		$("#pageStart").val(pageStartValue);
+         		
+             	//$("#mgz9List").empty();
              	$("#mgz9List").append(mgz9ListHtml).trigger("create");
+         		
+             	
          	}else{
          		modalAlertShow("검색 결과가 없습니다."); 
-         		$("#mgz9List").empty();
+         		//$("#mgz9List").empty();
          	}
          },           
          error: function(error) {
-             alert("오류 발생" + error);
+        	 var errorJson = JSON.stringify(error);
+             console.log(errorJson);
          }
  	});
  }
@@ -243,10 +265,6 @@
 	  console.log('State Change: ' + event.data);
 	}
  
-
-
- 
-
  
  /*
   * MGZ9 상세 조회
@@ -254,8 +272,6 @@
   * RETURN : MGZ9 상세
   */
   function selectMgz9Dtl(mgzSq){
-
-  	console.log("mgzSq :"+mgzSq);
 	  
   	$.ajax({
           type: "post",
@@ -394,9 +410,6 @@
     function(){ $(this).removeClass('gis') }
   )
   
-  selectMgz9List("MDA");
-  
-  
   var paramMz9 = location.search;
   
   var params = new URLSearchParams(paramMz9);
@@ -438,7 +451,14 @@
 
 }); */
  
- 
+//More Btn
+$("#btnMore").on('click', function(){
+	 
+	 var pageStart = $("#pageStart").val();
+	 
+	 selectMgz9List("MDA",pageStart,3);
+});
+
  
  var delay = 300;
  var timer = null;
