구매 수수료 변경 (10% -> 5%)

--- a/src/main/resources/templates/thymeleaf/fo/about/serviceIntro.html
+++ b/src/main/resources/templates/thymeleaf/fo/about/serviceIntro.html
@@ -147,8 +147,14 @@
 									<div class="wei-list">
 										<img src="resources/img/about/icon-1.png"  class="wei-img" />
 										<div class="wl-div">
+											<!-- 
+											* [수수료 변경 Task]
+											* 서비스 소개(http://localhost/serviceIntro) 
+											* 내용 : 간편한 거래 수수료 텍스트 변경
+											* 구매자 10% -> 5% 변경 (2023-01-16) : 정대현
+											-->
 											<h3>간편한 거래</h3>
-											<p>딜링아트는 판매자 5%, 구매자 10%의 낮은 수수료로 누구나 쉽게 작품을 구매하고 판매할 수 있습니다. 판매자는 작품 정보를 입력 후 원하는 방식(경매 또는 바로 판매)에 따라 손쉽게 작품을 판매할 수 있습니다. 구매자는 클릭 한 번으로 간편하게 경매에 응찰하거나 바로 작품을 구매할 수 있습니다. 또한 딜링아트에서는 아티스트 역시 직접 자신의 작품을 홍보하고 판매할 수 있습니다.</p>
+											<p>딜링아트는 판매자 5%, 구매자 5%의 낮은 수수료로 누구나 쉽게 작품을 구매하고 판매할 수 있습니다. 판매자는 작품 정보를 입력 후 원하는 방식(경매 또는 바로 판매)에 따라 손쉽게 작품을 판매할 수 있습니다. 구매자는 클릭 한 번으로 간편하게 경매에 응찰하거나 바로 작품을 구매할 수 있습니다. 또한 딜링아트에서는 아티스트 역시 직접 자신의 작품을 홍보하고 판매할 수 있습니다.</p>
 										</div>
 									</div>
 								</li>
