--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -672,6 +672,11 @@
 										<!--0830_구매수수료-->
 										<div id="Toggle" style="display:none">
 											<div class="toggle_box1">
+												<!-- 
+												* [수수료 변경 Task]
+												* 응찰 시작 전 모달창 유의사항(http://localhost/bidding)
+												* 내용 : 응찰 유의사항 작품 관련 수수료 텍스트 변경
+												-->
 												<div class="toggle_bar1">구매수수료</div>
 												<div class="toggle_close" id="toggle_close"><img src="resources/img/ba/icon-end_1.png"></div>
 											</div>
@@ -686,11 +691,11 @@
 													<tbody>
 														<tr>
 															<td>가상계좌</td>
-															<td>10%</td>
+															<td>5%</td> <!-- 가상계좌 10% -> 5% 변경 (2023-01-16) : 정대현 -->
 														</tr>
 														<tr>
 															<td>신용카드</td>
-															<td>11%</td>
+															<td>6.5%</td> <!-- 신용카드 11% -> 6.5% 변경 (2023-01-16) : 정대현 -->
 														</tr>
 													</tbody>
 												</table>
