--- a/src/main/resources/templates/thymeleaf/fo/about/terms_1.html
+++ b/src/main/resources/templates/thymeleaf/fo/about/terms_1.html
@@ -305,7 +305,13 @@
 							<p>제23조. 서비스 수수료</p>
 							1. 회사가 회원에게 부과하는 수수료는 상품의 판매 및 구매에 따른 제반 서비스를 이용함에 따라 발생되는 비용입니다. 수수료는 미술품에 대한 거래체결이 이루어지고 대금 결제가 요구되는 시점에 부과되며, 회사는 서비스 제공 비용, 시장상황, 취급하는 품목의 특성에 따라 서비스 수수료율을 정합니다. <br/>
 							2. 회사가 제공하는 온라인사이트 ”딜링아트” 서비스에 대한 수수료의 종류와 비율은 다음과 같습니다. <br>
-							1) 구매수수료: 판매자가 경매 방식 혹은 정찰가구매 방식으로 등록한 미술품에 대해 구매자가 회사를 통해 판매자에 지급해야 되는 정찰가 혹은 낙찰가 외에 추가로 지급해야 하는 수수료를 의미하며 회사가 정한 수수료율은 정찰가 혹은 낙찰가의 10% (부가세별도)로 정합니다. <br/>
+							<!-- 
+							* [수수료 변경 Task]
+							* 이용 약관(http://localhost/termOfService)
+							* 내용 : 이용양관 판매 수수료 텍스트 변경
+							* 낙찰가 10% -> 5% 변경 (2023-01-16) : 정대현
+							-->
+							1) 구매수수료: 판매자가 경매 방식 혹은 정찰가구매 방식으로 등록한 미술품에 대해 구매자가 회사를 통해 판매자에 지급해야 되는 정찰가 혹은 낙찰가 외에 추가로 지급해야 하는 수수료를 의미하며 회사가 정한 수수료율은 정찰가 혹은 낙찰가의 5% (부가세별도)로 정합니다. <br/>
 							2) 판매수수료: 판매자가 경매 방식 혹은 정찰가구매 방식으로 등록한 미술품이 낙찰 또는 매각되어 대금 지급이 완료된 시점에 발생되는 정찰가 혹은 낙찰가에서 회사에 지급되어야 하는 수수료를 의미하며 회사가 정한 수수료율은 정찰가 혹은 낙찰가의 5% (부가세별도)로 정합니다. <br/>
 							3) 거래철회비: 다음과 같은 사유가 발생한 경우 회사는 판매자 혹은 구매자에게 판매 혹은 구매철회에 대한수수료를 청구할 것입니다. 회사가 정한 수수료율은 정찰가 혹은 낙찰의 10% (부가세별도)로 정합니다. 거래철회비가 발생하는 경우 회사는 해당 회원에게 거래철회비를 별도로 통보하고 납부 방법을 안내합니다. 회사가 수령한 거래철회비의 30%에 해당하는 금액은 거래취소/철회로 인해 손해를 입은 거래 상대방인 회원에게 지급됩니다.  <br/>
 							- 구매자가 정찰가구매의 경우 구매 의사를 표시한 날 혹은 경매의 경우 낙찰을 받은 날로부터 48시간 이내에 회사가 기재한 청구서의 정찰가 혹은 낙찰가를 완납하지 않아 회사가 구매자에게 최종납입통보를 했음에도 불구하고 그로부터 12시간 이내에 최종적으로 해당 대금이 완납되지 않아 거래가 자동으로 취소된 경우<br/>
