--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
@@ -560,7 +560,7 @@ function myDealSearchList(){
 	    				myDealListHtml += '				<dd>'+ myDealList[i].bidCnt +'</dd>';
 	    				if(myDealList[i].maxBidPrc != null && myDealList[i].maxBidPrc != "" && myDealList[i].buyMbrSq == sMbrSqVal){ //예상 수수료 구매자
 		    				myDealListHtml += '				<dt>예상 수수료</dt>';
-		    				var fee = Math.round(myDealList[i].maxBidPrc.replaceAll(/,/g, '') * 0.1); //구매 수수료 10프로
+		    				var fee = Math.round(myDealList[i].maxBidPrc.replaceAll(/,/g, '') * 0.05); //구매 수수료 10프로 -> 구매 수수료 5프로 변경 (2023-01-16) : 정대현
 		    				var feeTax = Math.round(fee * 0.10);
 		    				myDealListHtml += '				<dd>'+formatComma(fee+feeTax)+' KRW</dd>';
 		    				//myDealListHtml += '				<dt>예상배송비</dt>';
@@ -588,15 +588,20 @@ function myDealSearchList(){
 	        				myDealListHtml += '			<div class="div_dealCount"><dt>남은 시간</dt>';
 	        				myDealListHtml += '			<dd class="dealCount" date="'+myDealList[i].dealEndngDateTime+'"></dd></div>';
         				}
+        				/* 
+        				* [수수료 변경 Task]
+        				* 거래 내역(http://localhost/myDeal) 
+        				* 내용 : 예상 수수료 //구매 수수료 10프로 //판매 수수료 5프로 (변수명 fee, feeTax) 로직 변경
+        				*/
         				if(myDealList[i].dealFinalPrc != null && myDealList[i].dealFinalPrc != "" && myDealList[i].buyMbrSq == sMbrSqVal){ //예상 수수료 구매자
 		    				myDealListHtml += '				<dt>예상 수수료</dt>';
-		    				var fee = Math.round(myDealList[i].dealFinalPrc.replaceAll(/,/g, '') * 0.1); //구매 수수료 10프로
+		    				var fee = Math.round(myDealList[i].dealFinalPrc.replaceAll(/,/g, '') * 0.05); //구매 수수료 10프로 -> 구매 수수료 5프로 변경 (2023-01-16) : 정대현
 		    				var feeTax = Math.round(fee * 0.10);
 		    				myDealListHtml += '				<dd>'+formatComma(fee+feeTax)+' KRW</dd>';
 		    				//myDealListHtml += '				<dt>예상배송비</dt>';
 		    				//myDealListHtml += '				<dd></dd>';
 	    				}
-	    				if(myDealList[i].dealFinalPrc != null && myDealList[i].dealFinalPrc != "" && myDealList[i].sellMbrSq == sMbrSqVal){ //예상 수수료 구매자
+	    				if(myDealList[i].dealFinalPrc != null && myDealList[i].dealFinalPrc != "" && myDealList[i].sellMbrSq == sMbrSqVal){ //예상 수수료 판매자
 		    				myDealListHtml += '				<dt>예상 수수료</dt>';
 		    				var fee = Math.round(myDealList[i].dealFinalPrc.replaceAll(/,/g, '') * 0.05); //판매 수수료 5프로
 		    				var feeTax = Math.round(fee * 0.10);
