메인 배너 추가 (사진, 소스 추가)

--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -104,16 +104,20 @@
 					<div class="swiper mySwiper">
 						<div class="swiper-wrapper">
 							
-							<div class="swiper-slide" align="center" style="background-color:#ffffff;">
+							<!-- <div class="swiper-slide" align="center" style="background-color:#ffffff;">
 								<a href="https://promo.dealing-art.com/dp/collectors-loving-ittem" target="_blank"><img src="resources/img/banner-20_pc.jpg" border="0"/></a>
+							</div> -->
+							<!--/* 메인 배너 추가 (2023-01-18) : 정대현 */-->
+							<div class="swiper-slide" align="center" style="background-color:#ffffff;">
+								<img src="resources/img/banner-21_pc.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/auto_action_bidding_5percet?utm_source=landingpage&utm_medium=MainBanner&utm_campaign=action_bidding_5percet ';" style="cursor:pointer;"/>
 							</div>
-							
 							<div class="swiper-slide" align="center" style="background-color:#ffffff;">
 								<img src="resources/img/banner-12_pc.png" onclick="javascript:location.href='/insights';" style="cursor:pointer;"/>
 							</div>
 							<div class="swiper-slide" align="center" style="background-color:#fe4d01;">
 								<img src="resources/img/banner-13_pc.jpg" onclick="javascript:location.href='/media';" style="cursor:pointer;"/>
 							</div>
+							
 							
 						</div>
 						<div class="swiper-pagination swpa-1"></div>
@@ -127,8 +131,12 @@
 					<div class="swiper mySwiper">
 						<div class="swiper-wrapper">
 						
-							<div class="swiper-slide" align="center" style="background-color:#ffffff;">
+							<!-- <div class="swiper-slide" align="center" style="background-color:#ffffff;">
 								<a href="https://promo.dealing-art.com/dp/collectors-loving-ittem" target="_blank"><img src="resources/img/banner-20_pc.jpg" border="0"/></a>
+							</div> -->
+							<!--/* 메인 배너 추가 (2023-01-18) : 정대현 */-->
+							<div class="swiper-slide">
+								<img src="resources/img/banner-21_pc.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/auto_action_bidding_5percet?utm_source=landingpage&utm_medium=MainBanner&utm_campaign=action_bidding_5percet';" style="cursor:pointer;"/>
 							</div>
 							<div class="swiper-slide">
 								<img src="resources/img/banner-12_pc.png" onclick="javascript:location.href='/insights';" style="cursor:pointer;"/>
@@ -151,10 +159,13 @@
 					<div class="swiper mySwiper">
 						<div class="swiper-wrapper">
 							
-							<div class="swiper-slide" align="center" style="background-color:#ffffff;">
+							<!-- <div class="swiper-slide" align="center" style="background-color:#ffffff;">
 								<a href="https://promo.dealing-art.com/dp/collectors-loving-ittem" target="_blank"><img src="resources/img/banner-20_mobile.jpg" border="0"/></a>
+							</div> -->
+							<!--/* 메인 배너 추가 (2023-01-18) : 정대현 */-->
+							<div class="swiper-slide">
+								<img src="resources/img/banner-21_mobile.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/auto_action_bidding_5percet?utm_source=landingpage&utm_medium=MainBanner&utm_campaign=action_bidding_5percet ';" style="cursor:pointer;"/>
 							</div>
-							
 							<div class="swiper-slide">
 								<img src="resources/img/banner-12_mobile.png" onclick="javascript:location.href='/insights';" style="cursor:pointer;"/>
 							</div>
