수수료 변경 사항 주석 처리 건

--- a/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
@@ -177,6 +177,11 @@
 											</thead>
 											<tbody>
 												<tr>
+													<!-- 
+													* [수수료 변경 Task]
+													* 작품 거래 등록(http://localhost/dealReg)
+													* 내용 : 판매수수료 설명란 변경 (거래 등록 유의사항)
+													-->
 													<td>5%</td>
 													<td>구매자가 거래 대금을 결제 완료한 <br>시점으로 14일 이내 지급(영업일 기준)</td>
 												</tr>
