--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_info.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_info.html
@@ -1103,6 +1103,11 @@
 												<label for="s2"><span></span>
 													<div class="check-info">
 														<p>거래 체결시 수수료가 부과됩니다.</p>
+														<!-- 
+														* [수수료 변경 Task]
+														* 작가 정보(http://localhost/information)
+														* 내용 : 판매 수수료, 구매수수료 텍스트 변경
+														-->
 														판매수수료 5%, 구매수수료 10% (최종낙찰가, 배송서비스, 부가세 제외)
 													</div>
 												</label>
